fixed overflow-x issue on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ body {
   width: '100%';
   background-color: #121212;
   color: #121212;
-  overflow-x: hidden;
 }
 
 /* width */
